Squish little bugs

--- a/makeup.css
+++ b/makeup.css
@@ -285,6 +285,7 @@ main {
     backface-visibility: hidden;
     width: 100%;
     height: 100%;
+    z-index: 101;
   }
 
   .itme .front {
@@ -418,8 +419,9 @@ main {
   top: 0;
   left: 0;
   background-color: rgba(255, 250, 244, 0.5);
+  -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
-  z-index: 10000;
+  z-index: 1000;
   pointer-events: none;
   overflow: hidden;
 }
